# Djitter

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: about.html  base.html  home.html
djitter/: settings.py  urls.py
djitter/djitter/: asgi.py  settings.py  wsgi.py
src/: manage.py
src/blog/: models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
src/djitter/: settings.py  urls.py
src/users/: forms.py  models.py  signals.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  profile.html  register.html
users/: urls.py
users/templates/users/: register.html
